--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,6 +26,8 @@
     
     <string name="error_inValid">邮箱或密码错误</string>
     <string name="success_signIn">登陆成功</string>
-    
     <string name="unavailable_network_connection">网络不可用,请检查WIFI或数据连接</string>
+
+    <string name="menu_text_square">广场</string>
+    <string name="menu_text_my">我的</string>
 </resources>
